--- a/sample_uploader_mappings.yml
+++ b/sample_uploader_mappings.yml
@@ -3,339 +3,320 @@
 # fields shared with current accepted file upload formats (ENIGMA + SESAR)
 # currently, these are the fields that are uploaded as controlled metadata
 shared_fields:
-    - "Id"
-    - "Name"
-    - "Well"
-    - "Depth"
-    - "Elevation"
-    - "Date"
-    - "Time"
-    - "Timezone"
-    - "Material"
-    - "Env_pakcage"
-    - "Description"
-    - "Latitude"
-    - "Longitude"
-    - "Country"
+    - id
+    - name
+    - well
+    - depth
+    - elevation
+    - date
+    - time
+    - timezone
+    - material
+    - env_pakcage
+    - description
+    - latitude
+    - longitude
+    - country
 
 # for the verification_mapping only fields that have verifiers that are not just "is_string"
 
 SESAR:
     basic_columns:
-        - "Sample Name"
-        - "Material"
-        - "Field name (informal classification)"
-        - "Location Description"
-        - "Locality Description"
-        - "Collection method"
-        - "Purpose"
-        - "Navigation type"
-        - "Primary physiographic feature"
-        - "Name of physiographic feature"
-        - "Field program/cruise"
-        - "Collector/Chief Scientist"
-        - "Collection date precision"
-        - "Current archive"
-        - "Related Identifiers"
-        - "Platform type"
-        - "Location description"
-        - "Zone"
-        - "State/Province"
-        - "Original archive contact"
-        - "Classification"
-        - "Vertical Datum"
-        - "Original archive"
-        - "Platform name"
-        - "Collection time (end)"
-        - "County"
-        - "Size unit"
-        - "Age unit"
-        - "Locality"
-        - "Sample Description"
-        - "Collection method description"
-        - "Other name(s)"
-        - "Geological unit"
-        - "Collector/Chief Scientist Address"
-        - "Collection time"
-        - "Locality description"
-        - "Size"
-        - "Launch platform name"
-        - "Depth scale"
-        - "Country"
-        - "City/Township"
-        - "Sub-object type"
-        - "Launch ID"
-    verification_mapping:
-        "IGSN":
-            - regex_string 
-            - []
-        "Parent IGSN": 
-            - regex_string 
-            - []
-        "Release date":
-            - is_date 
-            - []
-        "Latitude": 
-            - is_numeric 
-            - []
-        "Longitude": 
-            - is_numeric 
-            - []
-        "Coordinate Precision?": 
-            - is_numeric 
-            - []
-        "Elevation start": 
-            - is_numeric 
-            - []
-        "Elevation unit": 
-            - is_numeric 
-            - []
-        "Collection date": 
-            - is_date 
-            - []
-        "Current archive contact": 
-            - is_email 
-            - []
-        "Relation Type": 
-            - controlled_vocab 
-            - - - "grouped" 
-                - "co-located"
-        # new ones
-        "Latitude (end)": 
-            - is_numeric 
-            - []
-        "Depth in Core (min)": 
-            - is_numeric 
-            - []
-        "Age (min)": 
-            - is_numeric 
-            - []
-        "Depth in Core (max)": 
-            - is_numeric 
-            - []
-        "Elevation end": 
-            - is_numeric 
-            - []
-        "Easting (m)": 
-            - is_numeric 
-            - []
-        "Longitude (end)": 
-            - is_numeric 
-            - []
-        "Northing (m)": 
-            - is_numeric 
-            - []
-        "Age (max)": 
-            - is_numeric 
-            - []
-        "Geological age": 
-            - is_numeric 
-            - []
-        "Collection date (end)": 
-            - is_date 
-            - []
+        - sample_name
+        - material
+        - field_name_(informal_classification)
+        - location_description
+        - locality_description
+        - collection_method
+        - purpose
+        - navigation_type
+        - primary_physiographic_feature
+        - name_of_physiographic_feature
+        - field_program/cruise
+        - collector/chief_scientist
+        - collection_date_precision
+        - current_archive
+        - related_identifiers
+        - platform_type
+        - location_description
+        - zone
+        - state/province
+        - original_archive_contact
+        - classification
+        - vertical_datum
+        - original_archive
+        - platform_name
+        - collection_time_(end)
+        - county
+        - size_unit
+        - age_unit
+        - locality
+        - sample_description
+        - collection_method_description
+        - other_name(s)
+        - geological_unit
+        - collector/chief_scientist_address
+        - collection_time
+        - locality_description
+        - size
+        - launch_platform_name
+        - depth_scale
+        - country
+        - city/township
+        - sub-object_type
+        - launch_id
     column_mapping:
-        "Sample Name": "Name"
-        "IGSN": "Id"
-        "Parent IGSN": "Parent_id"
-    groups:
-        -   value: "Elevation start"
-            units: "Elevation unit"
-
-        -   value: "Latitude"
-            units: "str:degrees"
-
-        -   value: "Collection date"
-            units: "Collection date precision"
-
-        -   value: "Longitude"
-            units: "str:degrees"
-
-        -   value: "Age (min)"
-            units: "Age unit"
-
-        -   value: "Age (max)"
-            units: "Age unit"
-
-        -   value: "Geological Age"
-            units: "Geological unit"
-
-        -   value: "Collection date (end)"
-            units: "Collection date precision"
-
-        -   value: "Elevation end"
-            units: "Elevation unit"
-
-        -   value: "Depth in Core (max)"
-            units: "Depth scale"
-
-        -   value: "Depth in Core (min)"
-            units: "Depth scale"
-
-        -   value: "Size"
-            units: "Size unit"
+        igsn: id
+        parent_igsn: parent_id
+        sample_name: name
     date_columns:
-        - "Release date"
-        - "Collection date"
+        - collection_date
+    groups:
+        -   units: elevation_unit
+            value: elevation_start
+        -   units: str:degrees
+            value: latitude
+        -   units: collection_date_precision
+            value: collection_date
+        -   units: str:degrees
+            value: longitude
+        -   units: age_unit
+            value: age_(min)
+        -   units: age_unit
+            value: age_(max)
+        -   units: geological_unit
+            value: geological_age
+        -   units: collection_date_precision
+            value: collection_date_(end)
+        -   units: elevation_unit
+            value: elevation_end
+        -   units: depth_scale
+            value: depth_in_core_(max)
+        -   units: depth_scale
+            value: depth_in_core_(min)
+        -   units: size_unit
+            value: size
+    verification_mapping:
+        age_(max):
+            - is_numeric
+            - []
+        age_(min):
+            - is_numeric
+            - []
+        collection_date:
+            - is_date
+            - []
+        collection_date_(end):
+            - is_date
+            - []
+        coordinate_precision?:
+            - is_numeric
+            - []
+        current_archive_contact:
+            - is_email
+            - []
+        depth_in_core_(max):
+            - is_numeric
+            - []
+        depth_in_core_(min):
+            - is_numeric
+            - []
+        easting_(m):
+            - is_numeric
+            - []
+        elevation_end:
+            - is_numeric
+            - []
+        elevation_start:
+            - is_numeric
+            - []
+        elevation_unit:
+            - is_numeric
+            - []
+        geological_age:
+            - is_numeric
+            - []
+        igsn:
+            - regex_string
+            - []
+        latitude:
+            - is_numeric
+            - []
+        latitude_(end):
+            - is_numeric
+            - []
+        longitude:
+            - is_numeric
+            - []
+        longitude_(end):
+            - is_numeric
+            - []
+        northing_(m):
+            - is_numeric
+            - []
+        parent_igsn:
+            - regex_string
+            - []
+        relation_type:
+            - controlled_vocab
+            - - - grouped
+                    - co-located
+        release_date:
+            - is_date
+            - []
 
 ENIGMA:
     basic_columns:
-        - "SampleID"
-        - "Experiment Name"
-        - "Area Name"
-        - "Well Name"
-        - "Environmental Package"
-        - "Material"
-        - "Description"
-        - "Date"
-        - "Collection Time"
-        - "Time Zone"
-        - "Geological Zone"
-        - "Recovery Factor"
-        - "Method"
-        - "Fraction"
-        - "Replicate"
-        - "Maturation Time"
-        - "Treatment"
-        - "Temperature (Celsius)"
-        - "Moisture (%)"
-        - "Pore Water Extraction (microliters)"
-        - "Conductivity (mS/cm)"
-        - "pH"
-        - "DAPI Cell Count (cells/g)"
-        - "DNA Picogreen Total (ng)"
-        - "Total Carbon (mg/g dry weight)"
-        - "Biomass Carbon (mg/g)"
-        - "Total Nitrogen (mg/g dry weight)"
-        - "Leucine Activity (ngC/day cell}"
-        - "Functional Area"
-        - "Type of Well"
-        - "Ground Elevation (ft AMSL)"
-        - "Installation Method"
-        - "Boring (ft BGS)"
-        - "Boring Refusal"
-        - "Boring Diameter (in)"
-        - "Screen Type"
-        - "Well Casing Type"
-        - "Well Casing OD (in)"
-        - "Well Casing ID (in)"
-        - "Drive Casing Type"
-        - "Drive Casing ID (in)"
-        - "Drive Casing OD (in)"
-        - "Drive Casing Start Depth (ft BGS)"
-        - "Drive Casing End Depth (ft BGS)"
-        - "Packing Type"
-        - "Packing Depth Start (ft BGS)"
-        - "Packing Depth End (ft BGS)"
-        - "TopofWeatheredBedrock (ft BGS)"
-        - "TopofFreshBedrock (ft BGS)"
-        - "Aquifer"
-        - "Fractures/Cavities/WaterBreaks"
-        - "Other Name"
-        - "Screened"
-        - "Open"
-        - "Well Status"
-        - "Condition"
-        - "Origination or Plug/Abandon"
-        - "Min Water Level (ft AMSL)"
-        - "Average Water Level (ft AMSL)"
-        - "Max Water Level (ft AMSL)"
-        - "Upper Seal Type"
-        - "Upper Seal Start Depth (ft BGS)"
-        - "Upper Seal End Depth (ft BGS)"
-        - "Lower Seal Type (ft BGS)"
-        - "Lower Seal Start Depth (ft BGS)"
-        - "Lower Seal End Depth (ft BGS)"
-        - "Open Casing Type"
-        - "Open Casing OD (in)"
-        - "Open Casing ID (in)"
-        - "Open Casing Depth (ft BGS)"
-        - "Open Hole Diameter (in)"
-        - "Open Hole Depth (ft BGS)"
-        - "Open Interval Start Depth (ft BGS)"
-        - "Open Interval End Depth (ft BGS)"
-        - "Open Interval Diameter (in)"
-        - "Rock Formation"
-        - "Depth"
-        - "Elevation"
-        - "Time"
-        - "Timezone"
-        - "Material"
-        - "Env_package"
-        - "Continent"
-        - "Country"
-        - "Region"
-        - "Biome"
-        - "Feature"
-    verification_mapping:
-        "Filter (micron)":
-            - is_numeric
-            - []
-        "Date":
-            - is_date
-            - []
-        "Latitude":
-            - is_numeric
-            - []
-        "Longitude":
-            - is_numeric
-            - []
-        "Depth (cm bgs)":
-            - is_numeric
-            - []
-        "Redox Potential  (?)":
-            - is_numeric
-            - []
-        "pH":
-            - is_numeric
-            - []
-        "AODC (cells/g)":
-            - is_numeric
-            - []
-        "Organic Carbon (mg/g dry weight)":
-            - is_numeric
-            - []
-        "BONCAT Activity (cell/g)":
-            - is_numeric
-            - []
-        "Top of Casing Stickup (ft)":
-            - is_numeric
-            - []
-        "Top of Casing Elevation (ft AMSL)":
-            - is_numeric
-            - []
-        "Screened Interval (ft)":
-            - is_numeric
-            - []
-        "Screen Start Depth (ft BGS)":
-            - is_numeric
-            - []
-        "Screen End Depth (ft BGS)":
-            - is_numeric
-            - []
-        "Screen Top Elevation (ft AMSL)":
-            - is_numeric
-            - []
-        "Screen Bottom Elevation (ft AMSL)":
-            - is_numeric
-            - []
-        "Well Casing Depth (ft BGS)":
-            - is_numeric
-            - []
-        # Jon-Marcs columns
-        "Date":
-            - is_date
-            - []
+        - sampleid
+        - experiment_name
+        - area_name
+        - well_name
+        - environmental_package
+        - material
+        - description
+        - date
+        - collection_time
+        - time_zone
+        - geological_zone
+        - recovery_factor
+        - method
+        - fraction
+        - replicate
+        - maturation_time
+        - treatment
+        - temperature_(celsius)
+        - moisture_(%)
+        - pore_water_extraction_(microliters)
+        - conductivity_(ms/cm)
+        - ph
+        - dapi_cell_count_(cells/g)
+        - dna_picogreen_total_(ng)
+        - total_carbon_(mg/g_dry_weight)
+        - biomass_carbon_(mg/g)
+        - total_nitrogen_(mg/g_dry_weight)
+        - leucine_activity_(ngc/day_cell}
+        - functional_area
+        - type_of_well
+        - ground_elevation_(ft_amsl)
+        - installation_method
+        - boring_(ft_bgs)
+        - boring_refusal
+        - boring_diameter_(in)
+        - screen_type
+        - well_casing_type
+        - well_casing_od_(in)
+        - well_casing_id_(in)
+        - drive_casing_type
+        - drive_casing_id_(in)
+        - drive_casing_od_(in)
+        - drive_casing_start_depth_(ft_bgs)
+        - drive_casing_end_depth_(ft_bgs)
+        - packing_type
+        - packing_depth_start_(ft_bgs)
+        - packing_depth_end_(ft_bgs)
+        - topofweatheredbedrock_(ft_bgs)
+        - topoffreshbedrock_(ft_bgs)
+        - aquifer
+        - fractures/cavities/waterbreaks
+        - other_name
+        - screened
+        - open
+        - well_status
+        - condition
+        - origination_or_plug/abandon
+        - min_water_level_(ft_amsl)
+        - average_water_level_(ft_amsl)
+        - max_water_level_(ft_amsl)
+        -   upper_seal_type
+        -   upper_seal_start_depth_(ft_bgs)
+        -   upper_seal_end_depth_(ft_bgs)
+        - lower_seal_type_(ft_bgs)
+        - lower_seal_start_depth_(ft_bgs)
+        - lower_seal_end_depth_(ft_bgs)
+        - open_casing_type
+        - open_casing_od_(in)
+        - open_casing_id_(in)
+        - open_casing_depth_(ft_bgs)
+        - open_hole_diameter_(in)
+        - open_hole_depth_(ft_bgs)
+        - open_interval_start_depth_(ft_bgs)
+        - open_interval_end_depth_(ft_bgs)
+        - open_interval_diameter_(in)
+        - rock_formation
+        - depth
+        - elevation
+        - time
+        - timezone
+        - material
+        - env_package
+        - continent
+        - country
+        - region
+        - biome
+        - feature
     column_mapping:
-        "SampleID": "Id"
-        "Well Name": "Parent_id"
-    groups:
-        -   value: "Latitude"
-            units: "str:degrees"
-
-        -   value: "Longitude"
-            units: "str:degrees"
-    date_columns:
-        - "Date"
+        sampleid: id
+        well_name: parent_id
     column_unit_regex:
-        - '\((.+)\)'
+        - \((.+)\)
+    date_columns: date
+    groups:
+        -   units: str:degrees
+            value: latitude
+        -   units: str:degrees
+            value: longitude
+    verification_mapping:
+        aodc_(cells/g):
+            - is_numeric
+            - []
+        boncat_activity_(cell/g):
+            - is_numeric
+            - []
+        date:
+            - is_date
+            - []
+        depth_(cm_bgs):
+            - is_numeric
+            - []
+        filter_(micron):
+            - is_numeric
+            - []
+        latitude:
+            - is_numeric
+            - []
+        longitude:
+            - is_numeric
+            - []
+        organic_carbon_(mg/g_dry_weight):
+            - is_numeric
+            - []
+        ph:
+            - is_numeric
+            - []
+        redox_potential_(?):
+            - is_numeric
+            - []
+        screen_bottom_elevation_(ft_amsl):
+            - is_numeric
+            - []
+        screen_end_depth_(ft_bgs):
+            - is_numeric
+            - []
+        screen_start_depth_(ft_bgs):
+            - is_numeric
+            - []
+        screen_top_elevation_(ft_amsl):
+            - is_numeric
+            - []
+        screened_interval_(ft):
+            - is_numeric
+            - []
+        top_of_casing_elevation_(ft_amsl):
+            - is_numeric
+            - []
+        top_of_casing_stickup_(ft):
+            - is_numeric
+            - []
+        well_casing_depth_(ft_bgs):
+            - is_numeric
+            - []
